updated regional info, fixed apb gap

--- a/newnew.css
+++ b/newnew.css
@@ -672,7 +672,7 @@ main {
 			display: grid;
 			font-variant: all-small-caps;
 			font-size: 1.75rem;
-			gap: 30px 5px;
+			gap: 30px 10px;
 			grid-template-columns: repeat(3, 1fr);
 			
 			div {
